--- a/frontend/styles/CompletedGameList.module.css
+++ b/frontend/styles/CompletedGameList.module.css
@@ -18,9 +18,7 @@
     padding: 10px;
     margin: 5px;
     transition: all 0.2s;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    text-align: center;
 }
 
 .card:hover {
@@ -28,21 +26,12 @@
     transform: translate(-1px, -1px);
 }
 
-.cardPart {
-    display: flex;
-    align-items: center;
-}
-
-.cardPart *:not(:last-child) {
-    margin-right: 0.5em;
-}
-
 .scores {
     font-family: "Press Start 2P", sans-serif;
-    margin: 0;
+    margin: 0 5px;
 }
 
 .user {
     font-weight: bold;
-    margin: 0;
+    margin: 0 5px;
 }
