--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -5,6 +5,13 @@ body {
     margin: 0;
     padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+    min-height: 100vh;
+}
+
+#__next {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 h1 {
