--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -136,6 +136,10 @@ select {
     border: 2px solid lightgray;
     border-radius: 3px;
     box-sizing: content-box;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-position: right .75rem center;
+    background-size: 16px 12px;
 }
 
 .warning-message {
