--- a/frontend/styles/RoomUserList.module.css
+++ b/frontend/styles/RoomUserList.module.css
@@ -5,9 +5,9 @@
 
 .block {
     border-bottom: 1px solid lightgray;
+    padding: 10px;
     display: flex;
     align-items: center;
-    padding: 10px;
 }
 
 .offline {
@@ -18,6 +18,7 @@
     display: flex;
     list-style: none;
     padding: 0;
-    margin: 0 0 0 auto;
+    margin: 5px 0 0 0;
     align-items: center;
+    justify-content: flex-end;
 }
