--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -117,7 +117,9 @@ button:disabled {
     filter: invert(100%);
 }
 
-input[type=text], input[type=password] {
+input[type=text],
+input[type=password],
+input[type=number] {
     border: 2px solid lightgray;
     border-radius: 3px;
     font-size: 1em;
