--- a/frontend/styles/TableTopTen.module.css
+++ b/frontend/styles/TableTopTen.module.css
@@ -23,16 +23,20 @@
 }
 
 .number {
-    width: 10%;
+    width: 15%;
     text-align: right;
     padding-right: 10px;
     line-height: 2em;
 }
 
-.username {
-    width: 70%;
+.wins {
+    width: 15%;
+}
+
+.loses {
+    width: 15%;
 }
 
 .rank {
-    width: 20%;
+    width: 15%;
 }
