enable 2fa auth

--- a/frontend/styles/UserProfile.module.css
+++ b/frontend/styles/UserProfile.module.css
@@ -20,6 +20,12 @@
     width: 100px;
 }
 
+.input input[type=checkbox] {
+    flex: none;
+    width: auto;
+    margin-right: 10px;
+}
+
 .submit {
     display: block;
     margin-left: auto;
